--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -15,7 +15,7 @@
     "@angular/platform-browser-dynamic": "4.2.6",
     "@angular/platform-server": "4.2.6",
     "@angular/router": "4.2.6",
-    "@types/node": "8.0.9",
+    "@types/node": "^8.0.10",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^2.0.6",
     "aspnet-webpack": "^1.0.29",
@@ -26,7 +26,7 @@
     "es6-shim": "0.35.3",
     "event-source-polyfill": "0.0.9",
     "expose-loader": "0.7.3",
-    "extract-text-webpack-plugin": "2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "0.11.2",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
