--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -17,8 +17,8 @@
     "@angular/router": "4.2.6",
     "@types/node": "^8.0.10",
     "angular2-template-loader": "0.6.2",
-    "aspnet-prerendering": "^2.0.6",
-    "aspnet-webpack": "^1.0.29",
+    "aspnet-prerendering": "^3.0.1",
+    "aspnet-webpack": "^2.0.0",
     "awesome-typescript-loader": "3.2.1",
     "bootstrap": "3.3.7",
     "css": "2.2.1",
@@ -40,7 +40,7 @@
     "to-string-loader": "1.1.5",
     "typescript": "2.4.1",
     "url-loader": "0.5.9",
-    "webpack": "3.1.0",
+    "webpack": "^3.2.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12"
@@ -48,7 +48,7 @@
   "devDependencies": {
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
-    "chai": "4.0.2",
+    "chai": "4.1.0",
     "jasmine-core": "2.6.4",
     "karma": "1.7.0",
     "karma-chai": "0.1.0",
