--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -24,7 +24,6 @@
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "3.2.1",
-
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
     "event-source-polyfill": "0.0.9",
@@ -34,7 +33,6 @@
     "font-awesome": "^4.7.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
-
     "json-loader": "0.5.4",
     "ng2-charts": "^1.6.0",
     "preboot": "4.5.2",
@@ -54,6 +52,7 @@
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
     "chai": "4.1.0",
+    "codelyzer": "^3.1.2",
     "jasmine-core": "2.6.4",
     "karma": "1.7.0",
     "karma-chai": "0.1.0",
