--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -59,6 +59,7 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
-    "karma-webpack": "2.0.4"
+    "karma-webpack": "2.0.4",
+    "tslint": "^5.5.0"
   }
 }
