--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -5,19 +5,18 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/animations": "^4.2.6",
-    "@angular/cdk": "github:angular/cdk-builds",
-    "@angular/common": "4.2.6",
-    "@angular/compiler": "4.2.6",
-    "@angular/core": "4.2.6",
-    "@angular/forms": "4.2.6",
-    "@angular/http": "4.2.6",
-    "@angular/material": "github:angular/material2-builds",
-    "@angular/platform-browser": "4.2.6",
-    "@angular/platform-browser-dynamic": "4.2.6",
-    "@angular/platform-server": "4.2.6",
-    "@angular/router": "4.2.6",
-    "@types/node": "^8.0.12",
+    "@angular/animations": "^4.3.0",
+    "@angular/common": "^4.3.0",
+    "@angular/compiler": "^4.3.0",
+    "@angular/core": "^4.3.0",
+    "@angular/forms": "^4.3.0",
+    "@angular/http": "^4.3.0",
+    "@angular/platform-browser": "^4.3.0",
+    "@angular/platform-browser-dynamic": "^4.3.0",
+    "@angular/platform-server": "^4.3.0",
+    "@angular/router": "^4.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
+    "@types/node": "^8.0.13",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
@@ -30,19 +29,18 @@
     "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "0.11.2",
+    "font-awesome": "^4.7.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
-    "jquery": "^3.2.1",
     "json-loader": "0.5.4",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
-    "style-loader": "0.18.2",
     "to-string-loader": "1.1.5",
     "typescript": "2.4.1",
     "url-loader": "0.5.9",
-    "webpack": "^3.2.0",
+    "webpack": "^3.3.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "^0.8.13"
