--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
+    "jquery": "^3.2.1",
     "json-loader": "0.5.4",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
@@ -43,7 +44,7 @@
     "webpack": "^3.3.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
-    "zone.js": "^0.8.13"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@types/chai": "4.0.1",
