--- a/src/ApplicationManager/tsconfig.json
+++ b/src/ApplicationManager/tsconfig.json
@@ -6,7 +6,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipDefaultLibCheck": true,
-    "lib": [ "es6", "dom" ],
+    "lib": ["es2015", "es2017", "dom" ],
     "types": [ "node" ]
   },
   "exclude": [ "bin", "node_modules" ],
