--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -27,7 +27,6 @@
     "es6-shim": "0.35.3",
     "event-source-polyfill": "0.0.9",
     "expose-loader": "0.7.3",
-    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "0.11.2",
     "font-awesome": "^4.7.0",
     "html-loader": "0.4.5",
@@ -35,7 +34,6 @@
     "jquery": "^3.2.1",
     "json-loader": "0.5.4",
     "preboot": "4.5.2",
-    "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
     "to-string-loader": "1.1.5",
@@ -56,6 +54,9 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
-    "karma-webpack": "2.0.4"
+    "karma-webpack": "2.0.4",
+    "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6"
   }
 }
