--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -6,32 +6,31 @@
   },
   "dependencies": {
     "@angular/animations": "^4.3.1",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.3.1",
     "@angular/compiler": "^4.3.1",
     "@angular/core": "^4.3.1",
     "@angular/forms": "^4.3.1",
     "@angular/http": "^4.3.1",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.3.1",
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/platform-server": "^4.3.1",
     "@angular/router": "^4.3.1",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
-    "@types/node": "^8.0.14",
+    "@types/node": "^8.0.15",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
-    "awesome-typescript-loader": "3.2.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "awesome-typescript-loader": "^3.2.1",
     "css": "^2.2.1",
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
     "event-source-polyfill": "0.0.9",
     "expose-loader": "0.7.3",
     "file-loader": "0.11.2",
-    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
-    "jquery": "^3.2.1",
     "json-loader": "0.5.4",
     "preboot": "4.5.2",
     "reflect-metadata": "0.1.10",
@@ -48,6 +47,7 @@
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
     "chai": "4.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jasmine-core": "2.6.4",
     "karma": "1.7.0",
     "karma-chai": "0.1.0",
