--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -54,9 +54,6 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
-    "karma-webpack": "2.0.4",
-    "node-sass": "^4.5.3",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6"
+    "karma-webpack": "2.0.4"
   }
 }
