--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -17,11 +17,11 @@
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/platform-server": "^4.3.1",
     "@angular/router": "^4.3.1",
-    "@types/node": "^8.0.15",
+    "@types/node": "^8.0.17",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
-    "awesome-typescript-loader": "^3.2.1",
+    "awesome-typescript-loader": "^3.2.2",
     "css": "^2.2.1",
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
@@ -29,16 +29,16 @@
     "expose-loader": "0.7.3",
     "file-loader": "0.11.2",
     "hammerjs": "^2.0.8",
-    "html-loader": "0.4.5",
+    "html-loader": "^0.5.0",
     "isomorphic-fetch": "2.2.1",
-    "json-loader": "0.5.4",
-    "preboot": "4.5.2",
+    "json-loader": "^0.5.4",
+    "preboot": "5.0.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
     "to-string-loader": "1.1.5",
-    "typescript": "2.4.1",
+    "typescript": "^2.4.2",
     "url-loader": "0.5.9",
-    "webpack": "^3.3.0",
+    "webpack": "^3.4.1",
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "^0.8.14"
