--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -5,18 +5,18 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/animations": "^4.3.1",
+    "@angular/animations": "^4.3.2",
     "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.3.1",
-    "@angular/compiler": "^4.3.1",
-    "@angular/core": "^4.3.1",
-    "@angular/forms": "^4.3.1",
-    "@angular/http": "^4.3.1",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/core": "^4.3.2",
+    "@angular/forms": "^4.3.2",
+    "@angular/http": "^4.3.2",
     "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.3.1",
-    "@angular/platform-browser-dynamic": "^4.3.1",
-    "@angular/platform-server": "^4.3.1",
-    "@angular/router": "^4.3.1",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angular/platform-server": "^4.3.2",
+    "@angular/router": "^4.3.2",
     "@types/node": "^8.0.17",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
@@ -24,36 +24,36 @@
     "awesome-typescript-loader": "^3.2.2",
     "css": "^2.2.1",
     "css-loader": "0.28.4",
-    "es6-shim": "0.35.3",
+    "es6-shim": "^0.35.3",
     "event-source-polyfill": "0.0.9",
     "expose-loader": "0.7.3",
     "file-loader": "0.11.2",
     "hammerjs": "^2.0.8",
     "html-loader": "^0.5.0",
     "isomorphic-fetch": "2.2.1",
-    "json-loader": "^0.5.4",
-    "preboot": "5.0.0",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.2",
-    "to-string-loader": "1.1.5",
+    "json-loader": "^0.5.7",
+    "preboot": "^5.0.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.2",
+    "to-string-loader": "^1.1.5",
     "typescript": "^2.4.2",
-    "url-loader": "0.5.9",
+    "url-loader": "^0.5.9",
     "webpack": "^3.4.1",
-    "webpack-hot-middleware": "2.18.2",
-    "webpack-merge": "4.1.0",
-    "zone.js": "^0.8.14"
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@types/chai": "4.0.1",
-    "@types/jasmine": "2.5.53",
-    "chai": "4.1.0",
+    "@types/chai": "^4.0.1",
+    "@types/jasmine": "^2.5.53",
+    "chai": "^4.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jasmine-core": "2.6.4",
-    "karma": "1.7.0",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-jasmine": "1.1.0",
-    "karma-webpack": "2.0.4"
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-webpack": "^2.0.4"
   }
 }
