--- a/src/ApplicationManager/package.json
+++ b/src/ApplicationManager/package.json
@@ -5,40 +5,40 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/animations": "^4.3.3",
+    "@angular/animations": "^4.3.4",
     "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.3.3",
-    "@angular/compiler": "^4.3.3",
-    "@angular/core": "^4.3.3",
-    "@angular/forms": "^4.3.3",
-    "@angular/http": "^4.3.3",
+    "@angular/common": "^4.3.4",
+    "@angular/compiler": "^4.3.4",
+    "@angular/core": "^4.3.4",
+    "@angular/forms": "^4.3.4",
+    "@angular/http": "^4.3.4",
     "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.3.3",
-    "@angular/platform-browser-dynamic": "^4.3.3",
-    "@angular/platform-server": "^4.3.3",
-    "@angular/router": "^4.3.3",
-    "@types/node": "^8.0.19",
-    "angular2-template-loader": "0.6.2",
+    "@angular/platform-browser": "^4.3.4",
+    "@angular/platform-browser-dynamic": "^4.3.4",
+    "@angular/platform-server": "^4.3.4",
+    "@angular/router": "^4.3.4",
+    "@types/node": "^8.0.20",
+    "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "^3.2.2",
     "css": "^2.2.1",
-    "css-loader": "0.28.4",
+    "css-loader": "^0.28.4",
     "es6-shim": "^0.35.3",
-    "event-source-polyfill": "0.0.9",
-    "expose-loader": "0.7.3",
-    "file-loader": "0.11.2",
+    "event-source-polyfill": "^0.0.9",
+    "expose-loader": "^0.7.3",
+    "file-loader": "^0.11.2",
     "hammerjs": "^2.0.8",
-    "html-loader": "^0.5.0",
-    "isomorphic-fetch": "2.2.1",
+    "html-loader": "^0.5.1",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.7",
     "preboot": "^5.0.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.4.3",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.4.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.4.1",
+    "webpack": "^3.5.3",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0",
     "zone.js": "^0.8.16"
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@types/chai": "^4.0.2",
     "@types/jasmine": "^2.5.53",
-    "chai": "^4.1.0",
+    "chai": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
